# Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(AITank, 1.0)
AC_CONFIG_SRCDIR([Source/AITank.cpp])

SDL_VERSION=1.2.0
CXXFLAGS="$CXXFLAGS -g -O0"

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CXX
AC_PROG_RANLIB

WARNINGS="-Wall -Wpointer-arith -Wmissing-prototypes -Wmissing-declarations -Wcast-align -Wwrite-strings"

CPPFLAGS="$CPPFLAGS -I\../../../Framework/Include -I\$(top_srcdir)/Include -DOGL"
CXXFLAGS="$CXXFLAGS $WARNINGS"

dnl special pthread handling (AIX uses pthreads instead of pthread)
dnl AC_CHECK_LIB(pthread, pthread_create)
dnl if test $ac_cv_pthread_pthread_create = no; then
dnl 	AC_CHECK_LIB(pthreads, pthread_create)
dnl fi

dnl AC_HAVE_LIBRARY(xerces-c, XMLErrorReporter::isFatal)

CPPFLAGS="-I\../../../Framework/ThirdParty/xerces-c/include $CPPFLAGS"
LIBS="-L\../../../Framework/ThirdParty/xerces-c/lib $LIBS"

dnl Figure out which math library to use
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
        MATHLIB=""
        SYS_GL_LIBS="-lopengl32"
        ;;
    *-*-beos*)
        MATHLIB=""
        SYS_GL_LIBS="-lGL"
        ;;
    *-*-darwin*)
        MATHLIB=""
        SYS_GL_LIBS=""
        ;;
    *-*-aix*)
        if test x$ac_cv_prog_gcc = xyes; then
            CFLAGS="-mthreads"
	fi
        SYS_GL_LIBS=""
        ;;
    *)
        MATHLIB="-lm"
        AC_PATH_X
        AC_PATH_XTRA
        if test x$have_x = xyes; then
            CFLAGS="$CFLAGS $X_CFLAGS"
            SYS_GL_LIBS="$X_LIBS -lGL"
        else
            SYS_GL_LIBS="-lGL"
        fi
        ;;
esac
AC_SUBST(MATHLIB)

SYS_GL_LIBS="$SYS_GL_LIBS -lGLU"

dnl Check for OpenAL libs
AC_CHECK_LIB(openal,  alListenerf)

dnl Check for SDL

AM_PATH_SDL($SDL_VERSION,
            :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
##LIBS="-L/usr/lib $LIBS $SDL_LIBS"

dnl Check for OpenGL
AC_MSG_CHECKING(for OpenGL support)
have_opengl=no
AC_TRY_COMPILE([
 #if defined(__APPLE__) && defined(__MACH__)
 #include <OpenGL/gl.h>
 #else
 #include <GL/gl.h>
 #endif
],[
],[
have_opengl=yes
])
AC_MSG_RESULT($have_opengl)
if test x$have_opengl = xyes; then
    CXXFLAGS="$CXXFLAGS -DHAVE_OPENGL"
    GL_LIBS="$SYS_GL_LIBS"
else
    GL_LIBS=""
fi
AC_SUBST(GL_LIBS)

# Checks for libraries.
LIBS="$LIBS -lxerces-c"
LIBS="$LIBS -lpthread"


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Source/Makefile
           Makefile])
