# WARNING:
#   I have almost no prior experience with GNU autoconf/automake and this
#   is very much a work in progress.  The original Makefile for Linux can
#   be found in Source/Makefile.orig.  If you have trouble with building
#   CSPFlightSim with this configure script or autmake files, and know
#   how to fix them, please do so and commit the changes to CVS.  Thanks!
#
#   -OS

# Edit these lines to match your system configuration
export OSG_PREFIX=/usr/local
export DEMETER_PREFIX=@abs_srcdir@/../../THIRDPARTYLIBS/demeter

AUTOMAKE_OPTIONS = foreign
XTRA_DIST = 
SUBDIRS = Source

