

AUTOMAKE_OPTIONS   = foreign
lib_LTLIBRARIES    = libSISSObjects.la

libSISSObjects_la_SOURCES = BaseObject.cpp BaseEntity.cpp  Message.cpp \
   Projectile.cpp ObjectRangeInfo.cpp Platform.cpp PhysicalEntity.cpp \
     ObjectFactory.cpp BaseEntity.cpp ObjectManager.cpp Tank.cpp \
     VectorHolder.cpp Aircraft.cpp Airplane.cpp \
   TagHolder.cpp AggregateEntity.cpp AmphibiousVehicle.cpp CulturalFeature.cpp \
   EnvironmentalEntity.cpp Expendables.cpp GroundVehicle.cpp Helicopter.cpp \
   Human.cpp Lifeform.cpp Mortar.cpp Radio.cpp SurfaceVessel.cpp \
   SelfPropelledArtillery.cpp Sensor.cpp Spacecraft.cpp SubmersibleVessel.cpp \
   Supplies.cpp TowedArtillery.cpp ArmoredFightingVehicle.cpp   ArmoredUtillityVehicle.cpp  \
   BaseController.cpp TankController.cpp ProjectileController.cpp ControllerManager.cpp \
   Munition.cpp GuidedMunition.cpp BallisticMunition.cpp FixedMunition.cpp \
   PropertyMap.cpp

libSISSObjects_la_LIBADD = ../../../Framework/Source/libFramework.la
libSISSObjects_la_DEPENDENCIES = ../../../Framework/Source/libFramework.la